updated for scheme no longer being a graph